@@ -1,3 +1,9 @@
+20010503
+ - OpenBSD CVS Sync
+   - markus@cvs.openbsd.org 2001/05/02 16:41:20
+     [ssh-add.c]
+     fix prompt for ssh-add.
+
 20010502
  - OpenBSD CVS Sync
    - mouring@cvs.openbsd.org 2001/05/02 01:25:39
@@ -5302,4 +5308,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1189 2001/05/02 01:30:32 mouring Exp $
+$Id: ChangeLog,v 1.1190 2001/05/02 22:40:12 mouring Exp $
